--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,6 +18,14 @@ target 'AwesomeProject' do
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
 
+    post_install do |installer|
+      installer.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+          config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
+        end
+      end
+    end
+
 end
 
 target 'AwesomeProject-tvOS' do
