--- a/.detoxrc.json
+++ b/.detoxrc.json
@@ -3,8 +3,8 @@
   "runnerConfig": "e2e/.mocharc.json",
   "configurations": {
     "ios": {
-      "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/AwesomeProject.app",
-      "build": "xcodebuild -workspace ios/AwesomeProject.xcworkspace -scheme AwesomeProject -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build EXCLUDED_ARCHS=\"arm64 i386\"",
+      "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/AwesomeProject.app",
+      "build": "xcodebuild -workspace ios/AwesomeProject.xcworkspace -scheme AwesomeProject -configuration Release -sdk iphonesimulator -derivedDataPath ios/build EXCLUDED_ARCHS=\"arm64 i386\"",
       "type": "ios.simulator",
       "name": "iPhone 8"
     }
